--- a/style.css
+++ b/style.css
@@ -10,13 +10,19 @@ html{
   font-family: 'Roboto', sans-serif;
 }
 
-body{
+/* body{
   background: #333;
-}
+} */
 
 .wrapper{
   width: 1152px;
   margin: 0 auto;
+  padding: 0 120px;
+}
+
+.wrapper p{
+  line-height: 2;
+  margin-bottom: 20px;
 }
 
 /* Top Navigation */
@@ -95,3 +101,86 @@ a.btn{
   display: inline-block;
   font-size: 16px;
 }
+
+/* Blog section */
+h2{
+  font-size: 24px;
+  text-transform: uppercase;
+  margin-bottom: 36px;
+  position: relative;
+}
+
+h2::after{
+  content: "";
+  position: absolute;
+  height: 3px;
+  width: 48px;
+  background: #ffe259;
+  bottom: -8px;
+  left: 0;
+}
+
+.posts-wrapper{
+  padding-top: 100px;
+}
+
+.blogpost-card .thumbnail-image{
+  position: relative;
+}
+
+.blogpost-card .thumbnail-image > img{
+  width: 100%;
+  height: 260px;
+  object-fit: cover;
+}
+
+.blogpost-card .thumbnail-image .post-labels{
+  position: absolute;
+  top: 16px;
+  left: 16px;
+  background: #fcfcfc;
+  padding: 8px 16px;
+  border-radius: 10px;
+  display: flex;
+  align-items: center;
+  box-shadow: 0 4px 8px -3px rgb(0, 0, 0 0.2);
+}
+
+.blogpost-card .thumbnail-image .post-labels img{
+  margin-right: 10px;
+}
+
+.blogpost-card .thumbnail-image .post-labels a{
+  text-decoration: none;
+  color: #000;
+  font-size: 14px;
+  font-weight: bold;
+  text-transform: uppercase;
+}
+
+.blogpost-card{
+  padding-bottom: 50px;
+  border-bottom: 1px solid #bbafaf;
+  padding-top: 100px;
+}
+
+.blogpost-card:nth-of-type(1){
+  padding-top: 16px;
+}
+
+.blogpost-card h3{
+  font-family: "Dancing Script", cursive;
+  font-size: 36px;
+  margin: 42px 0 12px 0;
+}
+
+.blogpost-card .post-meta{
+  font-size: 14px;
+  background: #000;
+  color: #fcfcfc;
+  display: inline-block;
+  padding: 4px 16px;
+  margin-left: 24px;
+  margin-bottom: 24px;
+}
+
