--- a/style.css
+++ b/style.css
@@ -291,3 +291,74 @@ footer .social-icons a{
 footer .footer-right p{
   margin-top: 20px;
 }
+
+/* search bar */
+.top-nav .search-container{
+  position: absolute;
+  right: 0;
+  top: 24px;
+  opacity: 0;
+  pointer-events: none;
+  transition: 400ms;
+}
+
+.top-nav .search-container.active{
+  top: 40px;
+  opacity: 1;
+  pointer-events: auto;
+}
+
+.top-nav .wrapper{
+  position: relative;
+}
+
+.top-nav .search-container input[type='text']{
+  padding: 8px 24px;
+  border: 0;
+  box-shadow: 0 4px 8px -2px rgba(0, 0, 0, 0.2);
+}
+
+.top-nav .search-container input[type='submit']{
+  padding: 8px 24px;
+  background: #ffe259;
+  border: 1px solid #ffe259;
+  box-shadow: 0 4px 8px -2px rgba(0, 0, 0, 0.2);
+  cursor: pointer;
+}
+
+/* read more button */
+.post-body{
+  height: 180px;
+  overflow: hidden;
+  position: relative;
+}
+
+.post-body::after{
+  content: '';
+  height: 100px;
+  width: 100%;
+  position: absolute;
+  bottom: 0;
+  background: rgb(255,255,255);
+  background: linear-gradient(
+    0deg,
+    rgba(255,255,255,1) 17%,
+    rgba(255,255,255,1) 37%,
+    rgba(219,131,131,0) 87%
+    );
+}
+
+.post-body .read-more-container{
+  position: absolute;
+  bottom: 16px;
+  z-index: 100;
+  text-align: center;
+  left: 0;
+  right: 0;
+}
+
+.post-body .read-more-container .read-more{
+  text-decoration: none;
+  text-transform: uppercase;
+  font-weight: bold;
+}
