--- a/style.css
+++ b/style.css
@@ -362,3 +362,168 @@ footer .footer-right p{
   text-transform: uppercase;
   font-weight: bold;
 }
+
+/* hidden items */
+.mobile-menu-icon,
+.mobile-menu-container,
+.menu-close-icon{
+  display: none;
+}
+
+/* media queries */
+@media (max-width: 600px){
+  /* top nav */
+  .top-nav nav,
+  .top-nav .search-icon,
+  .top-nav .search-container{
+    display: none;
+  }
+
+  .wrapper{
+    width: 100%;
+    padding: 0 16px;
+  }
+
+  .top-nav .mobile-menu-icon{
+    display: block;
+    cursor: pointer;
+  }
+
+  /* header */
+  .header-wrapper{
+    width: 100%;
+    overflow: hidden;
+  }
+
+  .header-wrapper .hero{
+    display: block;
+    height: 100vh;
+    position: relative;
+  }
+
+  .header-wrapper .hero .hero-right{
+    position: absolute;
+    right: 0;
+    top: 0;
+    height: 100%;
+    width: 100px;
+  }
+
+  .header-wrapper .hero .hero-left{
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    padding-left: 32px;
+  }
+
+  .header-wrapper .hero .h1.main-heading{
+    font-size: 48px;
+    margin-bottom: 12px;
+  }
+
+  .header-wrapper a.btn{
+    width: 160px;
+    text-align: center;
+  }
+
+  /* blog posts */
+  .posts-wrapper .blogpost-card .thumbnail-image > img{
+    height: 220px;
+  }
+
+  h3.post-title{
+    font-size: 32px;
+    margin-top: 24px;
+  }
+
+  /* popular posts */
+  .popular-posts-container{
+    box-shadow: unset;
+    padding: 16px;
+  }
+
+  .popular-posts-container .popular-posts{
+    flex-direction: column;
+  }
+
+  .popular-posts .popular-post{
+    margin: 16px 0;
+  }
+
+  /* contact us */
+  .contact-container{
+    box-shadow: unset;
+    padding: 16px;
+  }
+
+  /* footer */
+  .footer-container{
+    flex-direction: column;
+  }
+
+  .footer-container .footer-center{
+    text-align: center;
+    margin-top: 60px;
+    margin-bottom: 60px;
+  }
+
+  .footer-container .footer-right{
+    text-align: center;
+  }
+
+  .footer-container .footer-right .social-icons{
+    margin: 20px auto;
+    margin-bottom: 60px;
+  }
+
+  /* mobile navigation menu */
+  .top-nav .mobile-menu-container{
+    display: flex;
+    position: fixed;
+    background: #222;
+    height: 100vh;
+    z-index: 200;
+    left: 0;
+    right: 0;
+    top: -100%;
+    align-items: center;
+    justify-content: center;
+    opacity: 0;
+    pointer-events: none;
+    transition: 500ms cubic-bezier(0.03, 0.95, 0.11, 1.09);
+  }
+
+  .top-nav .mobile-menu-container.active{
+    opacity: 1;
+    pointer-events: auto;
+    top: 0;
+  }
+
+  .top-nav .mobile-menu-container ul{
+    list-style: none;
+    text-align: center;
+  }
+
+  .top-nav .mobile-menu-container ul li{
+    margin: 16px 0;
+  }
+
+  .top-nav .mobile-menu-container ul li a{
+    text-decoration: none;
+    color: #fff;
+    font-size: 20px;
+  }
+
+  .top-nav .mobile-menu-container.active + .menu-close-icon{
+    display: flex;
+    z-index: 300;
+    cursor: pointer;
+    padding: 16px;
+    background: #000;
+    border-radius: 50%;
+    margin: 4px;
+  }
+
+
+}
